[package]
name = "bakka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
strsim = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2"
anyhow = "1.0"
dialoguer = "0.9"
cursive = "0.17"
cursive_tree_view = "0.8"